# convex_hull

./: CMakeLists.txt  README.md  a.txt  b.txt  bash_test.sh  c.txt  hello.txt  main  main.c  p1_test.sh  stacks  stacks.c
